feat: modifield picture session

--- a/index.html
+++ b/index.html
@@ -295,82 +295,28 @@
         <div class="owl-4-slider owl-carousel">
           <div class="item">
             <div class="video-media">
-              <img src="assets/images/img_1.jpg" alt="Image" class="img-fluid">
-              <a href="https://www.youtube.com/shorts/SOp7NblGJ2k" class="d-flex play-button align-items-center"
-                data-fancybox>
-                <span class="icon mr-3">
-                  <span class="icon-play"></span>
-                </span>
-                <div class="caption">
-                  <h3 class="m-0">Betinho Matador</h3>
-                </div>
-              </a>
+              <img src="assets/images/primosfc-logo.png" alt="Image" class="img-fluid">
             </div>
           </div>
           <div class="item">
             <div class="video-media">
-              <img src="assets/images/img_2.jpg" alt="Image" class="img-fluid">
-              <a href="https://vimeo.com/139714818" class="d-flex play-button align-items-center" data-fancybox>
-                <span class="icon mr-3">
-                  <span class="icon-play"></span>
-                </span>
-                <div class="caption">
-                  <h3 class="m-0">Kai Nets Double To Secure Comfortable Away Win</h3>
-                </div>
-              </a>
+              <img src="assets/images/primosfc-logo.png" alt="Image" class="img-fluid">
             </div>
           </div>
           <div class="item">
             <div class="video-media">
-              <img src="assets/images/img_3.jpg" alt="Image" class="img-fluid">
-              <a href="https://vimeo.com/139714818" class="d-flex play-button align-items-center" data-fancybox>
-                <span class="icon mr-3">
-                  <span class="icon-play"></span>
-                </span>
-                <div class="caption">
-                  <h3 class="m-0">Romolu to stay at Real Nadrid?</h3>
-                </div>
-              </a>
+              <img src="assets/images/primosfc-logo.png" alt="Image" class="img-fluid">
             </div>
           </div>
 
           <div class="item">
             <div class="video-media">
-              <img src="assets/images/img_1.jpg" alt="Image" class="img-fluid">
-              <a href="https://vimeo.com/139714818" class="d-flex play-button align-items-center" data-fancybox>
-                <span class="icon mr-3">
-                  <span class="icon-play"></span>
-                </span>
-                <div class="caption">
-                  <h3 class="m-0">Dogba set for Juvendu return?</h3>
-                </div>
-              </a>
+              <img src="assets/images/primosfc-logo.png" alt="Image" class="img-fluid">
             </div>
           </div>
           <div class="item">
             <div class="video-media">
-              <img src="assets/images/img_2.jpg" alt="Image" class="img-fluid">
-              <a href="https://vimeo.com/139714818" class="d-flex play-button align-items-center" data-fancybox>
-                <span class="icon mr-3">
-                  <span class="icon-play"></span>
-                </span>
-                <div class="caption">
-                  <h3 class="m-0">Kai Nets Double To Secure Comfortable Away Win</h3>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="item">
-            <div class="video-media">
-              <img src="assets/images/img_3.jpg" alt="Image" class="img-fluid">
-              <a href="https://vimeo.com/139714818" class="d-flex play-button align-items-center" data-fancybox>
-                <span class="icon mr-3">
-                  <span class="icon-play"></span>
-                </span>
-                <div class="caption">
-                  <h3 class="m-0">Romolu to stay at Real Nadrid?</h3>
-                </div>
-              </a>
+              <img src="assets/images/primosfc-logo.png" alt="Image" class="img-fluid">
             </div>
           </div>
         </div>
