--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:image" content="assets/images/bg_3.jpg">
+  <meta property="og:image" content="./assets/images/bg_3.jpg">
   <meta property="og:title" content="Primo's FC">
   <meta property="og:description" content="Temporada 2023">
 
@@ -195,7 +195,7 @@
                   </tr>
                   <tr>
                     <td>8</td>
-                    <td><strong class="text-white">Paulo Costa</strong></td>
+                    <td><strong class="text-white">Paulo</strong></td>
                     <td>2</td>
                     <td>2</td>
                   </tr>
@@ -237,13 +237,13 @@
                   </tr>
                   <tr>
                     <td>14</td>
-                    <td><strong class="text-white">Betinho Ferreira</strong></td>
+                    <td><strong class="text-white">Betinho</strong></td>
                     <td>1</td>
                     <td>4</td>
                   </tr>
                   <tr>
                     <td>38</td>
-                    <td><strong class="text-white">Everton Pepo</strong></td>
+                    <td><strong class="text-white">Everton</strong></td>
                     <td>1</td>
                     <td>2</td>
                   </tr>
@@ -267,7 +267,7 @@
                   </tr>
                   <tr>
                     <td>11</td>
-                    <td><strong class="text-white">Junior Car</strong></td>
+                    <td><strong class="text-white">Junior</strong></td>
                     <td>1</td>
                     <td>0</td>
                   </tr>
@@ -315,23 +315,23 @@
           <div class="item">
             <div class="video-media">
               <img src="assets/images/primosfc-logo.png" alt="Image" class="img-fluid"
-                style="width: 300px; height: 350px;">
+                style="width: 350px; height: 350px;">
             </div>
           </div>
           <div class="item">
             <div class="video-media">
-              <img src="assets/images/image1.jpeg" alt="Image" class="img-fluid" style="width: 300px; height: 350px;">
+              <img src="assets/images/image1.jpeg" alt="Image" class="img-fluid" style="width: 350px; height: 350px;">
             </div>
           </div>
           <div class="item">
             <div class="video-media">
               <img src="assets/images/primosfc-logo.png" alt="Image" class="img-fluid"
-                style="width: 300px; height: 350px;">
+                style="width: 350px; height: 350px;">
             </div>
           </div>
           <div class="item">
             <div class="video-media">
-              <img src="assets/images/image2.jpeg" alt="Image" class="img-fluid" style="width: 300px; height: 350px;">
+              <img src="assets/images/image2.jpeg" alt="Image" class="img-fluid" style="width: 350px; height: 350px;">
             </div>
           </div>
         </div>
