fix: property og:image - release v0.2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:image" content="./assets/images/bg_3.jpg">
+  <meta property="og:image" content="../primos-fc/assets/images/bg_3.jpg">
   <meta property="og:title" content="Primo's FC">
   <meta property="og:description" content="Temporada 2023">
 
